03-network-policies/01-listener-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: listener
spec:
  containers:
  - name: listener
    image: bogd/listener
