03-network-policies/01-listener-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: listener
  labels:
    type: listener
spec:
  containers:
  - name: listener
    image: bogd/listener
