03-network-policies/04-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: listener-client
spec:
  containers:
  - name: listener
    image: alpine
    stdin: true
    tty: true
