03-network-policies/07-client-pod-labeled.yaml
apiVersion: v1
kind: Pod
metadata:
  name: listener-client
  labels:
    type: client
spec:
  containers:
  - name: listener
    image: alpine
    stdin: true
    tty: true
