03-network-policies/05-network-policy-singleport.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: listener-allow-only-13100
spec:
  podSelector:
    matchLabels:
      type: listener
  policyTypes:
  - Ingress
  ingress:
  - ports:
      - port: 13100
